--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     font-family: sans-serif;
-    color: rgb(173, 165, 168);
+    color: rgb(201, 32, 94);
 }
 header{
      text-align: center;
@@ -8,10 +8,10 @@ header{
 
 
 span{
-    background-color: gray;
+    background-color: rgb(227, 16, 55);
     color: white;
     padding: 5px;
-    border: 1px solid black;
+    border: 1px solid rgb(23, 42, 217);
     border-radius: 5px;
 }
 *{
